Improve networking code with velocity natives